- Removed duplicated "issued by" text - Converted "market" link into a button - Fixed responsive layout - Made feed tables swipe left and right on mobile - Applied active state to tab

--- a/app/assets/stylesheets/components/_help.scss
+++ b/app/assets/stylesheets/components/_help.scss
@@ -22,7 +22,3 @@
 .help-content p:last-of-type {
 	margin-bottom: 0;
 }
-
-.help-content h3 {
-	margin-top: 1rem;
-}
