--- a/app/assets/stylesheets/components/_rudex.scss
+++ b/app/assets/stylesheets/components/_rudex.scss
@@ -110,7 +110,6 @@ div.rudex__gateway {
 }
 
 div.service-selector {
-  margin-bottom: 2rem;
 
   @include breakpoint(medium) {
     border-bottom: 1px solid $border-color;
